# fiap-tech-chalenge-03

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py  schemas.py
app/core/: config.py  exceptions.py  logging.py  resilience.py
app/db/: models.py  session.py
app/models/: domain.py
app/nlu/: esclarecimento.py  interpretador.py
app/orchestrator/: avisos.py  fluxo.py
app/rag/: engine.py  ingest_protocolos.py  ingest_pubmedqa.py
app/services/: contraindicacoes.py  emergencia.py  interacoes.py  mesh_mapper.py  ordenacao.py  prontuario_validator.py
app/workers/: exames_updater.py
data/: app.db  interacoes.json
data/faiss_index/: index.faiss  index.pkl
data/protocolos/: protocolo-iam.json  protocolo-pneumonia.json  protocolo-sepse.json
data/pubmedqa/: sample.json
docs/: api.md  arquitetura.md  fluxos.md  operacao.md  protocolo-schema.md
scripts/: build_kb.py  init_db.py
tests/e2e/: test_req1_consulta.py  test_req2_conduta.py  test_req3_exames.py  test_req4_tratamento.py
tests/integration/: conftest.py  test_api_conduta.py  test_api_consulta.py  test_api_exames.py  test_api_sessao.py  test_api_tratamento.py  test_error_resilience.py  test_exception_handlers.py
tests/properties/: test_propriedades.py
tests/unit/: test_avisos.py  test_config.py  test_contraindicacoes.py  test_db_schema.py  test_domain_models.py  test_emergencia.py  test_esclarecimento.py  test_exames_updater.py  test_ingest_protocolos.py  test_ingest_pubmedqa.py  test_interacoes.py  test_logging.py  (+8 more)
(+10 files in other folders)
