[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-virtual-assistant"
version = "0.1.0"
description = "Assistente Virtual Médico Hospitalar — suporte à decisão clínica baseado em RAG."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*"]
